--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MCR</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="MCR-fonts/helvetica_neue_cyr.css" rel="stylesheet">
 </head>
 <body id="body">
 <a class="overlay" href="#body"></a>
