--- a/index.html
+++ b/index.html
@@ -9,8 +9,62 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="MCR-fonts/helvetica_neue_cyr.css" rel="stylesheet">
 </head>
-<body id="body">
-<a class="overlay" href="#body"></a>
+<body  id="body">
+<div id="open-modal" class="overlay">
+    <a href="#body" class="overlay-link"></a>
+    <div class="modal">
+        <div class="modal__header">
+            <img class="modal__header-logo" src="img/support-img.png" alt="">
+            <div class="modal__header-text">
+                <div class="modal__header-text-title">Поддержка</div>
+                <div class="modal__header-text-thanks">Спасибо за обращение</div>
+            </div>
+        </div>
+        <div class="modal__page-list">
+            <div class="modal__page-list__email-item-active">Электронная почта</div>
+            <div class="modal__page-list__telephon-item">Телефон</div>
+        </div>
+        <div class="modal__accaunt-box">
+            <div class="modal__accaunt-box__title">Аккаунт</div>
+            <input class="modal__accaunt-box__input" type="text" value="" placeholder="Введите электронный адрес">
+        </div>
+        <div class="modal__question-box">
+            <div class="modal__question-box__title">Вопрос</div>
+            <input class="modal__question-box__input" type="text" value="" placeholder="Введите вопрос">
+            <div class="modal__question-box__desc">Введите ключевые слова подходяшего вопроса <br>или выберите FAQ
+            </div>
+        </div>
+        <div class="modal__button-box">
+            <input class="modal__button-box__button" type="button" value="начать чат">
+        </div>
+        <a href="#">
+            <div class="modal__faq">Выберите FAQ</div>
+        </a>
+        <div class="modal__footer">
+            <div class="modal__footer-title-box">
+                <div class="modal__footer-title-box__popular-questions">Популярные вопросы</div>
+                <div class="modal__footer-title-box__more">Больше ></div>
+            </div>
+            <div class="modal__footer-questions-list">
+                <a href="#">
+                    <div class="modal__footer-questions-list-item">Как пройти верификацию для Личного аккаунта</div>
+                </a>
+                <a href="#">
+                    <div class="modal__footer-questions-list-item">Вывод среств приостановлен</div>
+                </a>
+                <a href="#">
+                    <div class="modal__footer-questions-list-item">Как сделать вывод криптовалюты</div>
+                </a>
+                <a href="#">
+                    <div class="modal__footer-questions-list-item">Отмена Вывода</div>
+                </a>
+                <a href="#">
+                    <div class="modal__footer-questions-list-item">Как купить/продать криптовалюту за Фиат</div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 <header>
     <div class="menu header-menu">
         <div class="menu__logo">
@@ -58,60 +112,6 @@
         <a href="#open-modal" class="box-support__btn-sticky">
             <img class="box-support__img-support" src="img/support-img.png" alt="">
         </a>
-    </div>
-    <div style="position: absolute">
-        <div id="open-modal" class="modal">
-            <div class="modal__header">
-                <img class="modal__header-logo" src="img/support-img.png" alt="">
-                <div class="modal__header-text">
-                    <div class="modal__header-text-title">Поддержка</div>
-                    <div class="modal__header-text-thanks">Спасибо за обращение</div>
-                </div>
-            </div>
-            <div class="modal__page-list">
-                <div class="modal__page-list__email-item-active">Электронная почта</div>
-                <div class="modal__page-list__telephon-item">Телефон</div>
-            </div>
-            <div class="modal__accaunt-box">
-                <div class="modal__accaunt-box__title">Аккаунт</div>
-                <input class="modal__accaunt-box__input" type="text" value="" placeholder="Введите электронный адрес">
-            </div>
-            <div class="modal__question-box">
-                <div class="modal__question-box__title">Вопрос</div>
-                <input class="modal__question-box__input" type="text" value="" placeholder="Введите вопрос">
-                <div class="modal__question-box__desc">Введите ключевые слова подходяшего вопроса <br>или выберите FAQ
-                </div>
-            </div>
-            <div class="modal__button-box">
-                <input class="modal__button-box__button" type="button" value="начать чат">
-            </div>
-            <a href="#">
-                <div class="modal__faq">Выберите FAQ</div>
-            </a>
-            <div class="modal__footer">
-                <div class="modal__footer-title-box">
-                    <div class="modal__footer-title-box__popular-questions">Популярные вопросы</div>
-                    <div class="modal__footer-title-box__more">Больше ></div>
-                </div>
-                <div class="modal__footer-questions-list">
-                    <a href="#">
-                        <div class="modal__footer-questions-list-item">Как пройти верификацию для Личного аккаунта</div>
-                    </a>
-                    <a href="#">
-                        <div class="modal__footer-questions-list-item">Вывод среств приостановлен</div>
-                    </a>
-                    <a href="#">
-                        <div class="modal__footer-questions-list-item">Как сделать вывод криптовалюты</div>
-                    </a>
-                    <a href="#">
-                        <div class="modal__footer-questions-list-item">Отмена Вывода</div>
-                    </a>
-                    <a href="#">
-                        <div class="modal__footer-questions-list-item">Как купить/продать криптовалюту за Фиат</div>
-                    </a>
-                </div>
-            </div>
-        </div>
     </div>
     <div class="col-box">
         <div class="column-one">
@@ -441,7 +441,7 @@
     </div>
     <div class="footer">
         <div>© Monolithos 2020. Все права защищены</div>
-        <div>Вопросы и предложения: <a class="footer__email" href="#">info@monolithos.com</a></div>
+        <div>Вопросы и предложения: <a class="footer__email" href="mailto:info@monolithos.com">info@monolithos.com</a></div>
         <div><a class="footer__link" href="#">Пользовательское соглашение</a></div>
     </div>
 </footer>
