mobile version add

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="MCR-fonts/helvetica_neue_cyr.css" rel="stylesheet">
 </head>
-<body  id="body">
+<body id="body">
 <div id="open-modal" class="overlay">
     <a href="#body" class="overlay-link"></a>
     <div class="modal">
@@ -65,7 +65,7 @@
         </div>
     </div>
 </div>
-<header>
+<header class="menu-padding">
     <div class="menu header-menu">
         <div class="menu__logo">
             <img class="menu__logo-img" src="img/header-logo.png" alt="">
@@ -116,7 +116,7 @@
     <div class="col-box">
         <div class="column-one">
             <img class="column-one__logo" src="img/mcr.png" alt="">
-            <iframe class="column-one__video" width="510" height="280"
+            <iframe class="column-one__video"
                     src="https://www.youtube.com/embed/4gpf3vW07zg"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -397,7 +397,7 @@
 <div class="brick-wall-background"></div>
 <div class="background-image"></div>
 <div class="blue-gradient"></div>
-<footer>
+<footer class="menu-padding">
     <div class="menu footer-menu">
         <div class="menu__logo">
             <img class="menu__logo-img" src="img/footer-logo.png" alt="">
@@ -441,7 +441,8 @@
     </div>
     <div class="footer">
         <div>© Monolithos 2020. Все права защищены</div>
-        <div>Вопросы и предложения: <a class="footer__email" href="mailto:info@monolithos.com">info@monolithos.com</a></div>
+        <div>Вопросы и предложения: <a class="footer__email" href="mailto:info@monolithos.com">info@monolithos.com</a>
+        </div>
         <div><a class="footer__link" href="#">Пользовательское соглашение</a></div>
     </div>
 </footer>
