slick-slide add

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>MCR</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="MCR-fonts/helvetica_neue_cyr.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="js/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css"/>
 </head>
 <body id="body">
 <div class="box-support">
@@ -214,9 +216,14 @@
     <div class="partners-box">
         <div class="partners-box__title">Партнёры</div>
         <div class="partners-box__logo-box">
-            <div class="partners-box__logo-box__left-arrow"></div>
-            <img class="partners-box__logo-box-img" src="img/hodl_hodl.png" alt="">
-            <div class="partners-box__logo-box__right-arrow"></div>
+            <div class="slider single-item">
+                <div><img src="img/hodl_hodl.png" alt=""></div>
+                <div><img src="img/bits.media.png" alt=""></div>
+                <div><img src="img/hodl_hodl.png" alt=""></div>
+                <div><img src="img/bits.media.png" alt=""></div>
+                <div><img src="img/hodl_hodl.png" alt=""></div>
+                <div><img src="img/bits.media.png" alt=""></div>
+            </div>
         </div>
     </div>
     <div class="media-base-box">
@@ -460,5 +467,8 @@
         <div><a class="footer__link" href="#">Пользовательское соглашение</a></div>
     </div>
 </footer>
+<script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
+<script type="text/javascript" src="js/slick/slick.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
