--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <div><a class="footer__link" href="#">Пользовательское соглашение</a></div>
     </div>
 </footer>
-<script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/slick/slick.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
